--- a/styles.css
+++ b/styles.css
@@ -287,10 +287,7 @@ padding-left:215px;
   line-height: 24px;
   letter-spacing: 0.03em; 
   color: #FFFFFF;
-  width: 231px;
-height: 21px;
-left: 215px;
-top: 2208px;
+
 }
 
 .footer-mail{
@@ -300,10 +297,7 @@ top: 2208px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  width: 231px;
-height: 21px;
-left: 215px;
-top: 2238px;
+
 
 }
 
@@ -314,9 +308,33 @@ top: 2238px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  width: 231px;
-height: 21px;
-left: 215px;
-top: 2268px;
+
+
+}
+
+.p-hero-list{
+  display: flex;
+  padding-top:94px;
+  padding-bottom:50px;
+  padding-left:495px
+  
+}
+
+.p-hero-button{
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 26px;
+text-align: center;
+letter-spacing: 0.03em;
+padding-right:27px;
+color: #212121;
+  margin-right:8px;
+  background: #F5F4FA;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+width: 73px;
+height: 38px
 
 }
