--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ header .container{
 
 .heder-list{
   display:flex;
+  margin-left:93px;
 }
 
 .heder-page{
@@ -107,32 +108,21 @@ section, header, footer{
 
 .hero-section{
 padding-top:200px;
-padding-bottom:280px;
-  left: 0px;
-  top: 80px;
+padding-bottom:200px;
 background-color:#2F303A;
-
+width:1600px;
 }
 
 .hero-text{
-  width: 696px;
-  height: 120px;
-  left: 452px;
-  top: 280px;
-  
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
-  
+  line-height: 1.36; 
   text-align: center;
   letter-spacing: 0.06em;
-  text-transform: uppercase;
-  
+  text-transform: uppercase; 
   color: #FFFFFF;
-margin-left:452px;
-
 }
 
 .hero-button{
@@ -142,7 +132,7 @@ border-radius: 4px;
 font-style: normal;
 font-weight: 700;
 font-size: 16px;
-line-height: 30px;
+line-height: 1.87;
 display: flex;
 align-items: center;
 text-align: center;
@@ -166,7 +156,7 @@ margin-right: 30px;
 font-style: normal;
 font-weight: 700;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #212121;
@@ -177,7 +167,7 @@ color: #212121;
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
-line-height: 24px;
+line-height: 1.71;
 letter-spacing: 0.03em;
 color: #757575;
 }
@@ -190,7 +180,7 @@ padding-bottom:94px;
 font-style: normal;
 font-weight: 700;
 font-size: 36px;
-line-height: 42px;
+line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
@@ -215,7 +205,7 @@ margin-right: 30px;
 font-style: normal;
 font-weight: 700;
 font-size: 36px;
-line-height: 42px;
+line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
@@ -248,7 +238,7 @@ margin-right: 30px;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 19px;
+line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
@@ -258,19 +248,21 @@ color: #212121;
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
-line-height: 19px;
+line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 color: #757575;
 }
 
 .footer{
-padding-top:60px;
-padding-bottom:60px;
-padding-left:215px;
+
   background: #2F303A;
 }
 
+.footer .container{
+  padding-top:60px;
+padding-bottom:60px;
+}
 
 .footer-item{
   margin-bottom:9px;
@@ -284,7 +276,7 @@ padding-left:215px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.72;
   letter-spacing: 0.03em; 
   color: #FFFFFF;
 
@@ -305,36 +297,84 @@ padding-left:215px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-
+  
 
 }
 
-.p-hero-list{
+.button-list{
   display: flex;
   padding-top:94px;
   padding-bottom:50px;
-  padding-left:495px
-  
+  justify-content: center;
 }
 
-.p-hero-button{
+  /* .button-item{
+ 
+}   */
+
+.button-button{
+  border: none;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 26px;
+line-height: 1.62;
 text-align: center;
 letter-spacing: 0.03em;
-padding-right:27px;
 color: #212121;
   margin-right:8px;
   background: #F5F4FA;
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 border-radius: 4px;
-width: 73px;
-height: 38px
 
+/* padding-left:24px;
+padding-right:24px;
+padding-top:6px;
+padding-bottom:6px; */
+
+/* padding: 6px 24px 6px 24px; */
+padding:6px 24px;
+
+}
+
+.button-button:hover{
+  border: none;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+    margin-right:8px;
+    background:  #2196F3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  
+  /* padding-left:24px;
+  padding-right:24px;
+  padding-top:6px;
+  padding-bottom:6px; */
+  
+  /* padding: 6px 24px 6px 24px; */
+  padding:6px 24px;
+  
+}
+
+.product-list{
+  gap:30px;
+  flex-wrap: wrap;
+  display:flex;
+  justify-content: center;
+  margin-bottom:94px;
+  margin-top:50px;
+}
+
+.footer-map{
+  margin-top:20px;
+  margin-bottom:9px;
 }
