--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,7 @@ ul{
   margin: 0;
 }
 
-h1{
-  margin: 0;
-}
-
-h2{
-  margin: 0;
-}
-
-h3{
+h1, h2, h3,p{
   margin: 0;
 }
 
@@ -109,8 +101,8 @@ section, header, footer{
 .hero-section{
 padding-top:200px;
 padding-bottom:200px;
-background-color:#2F303A;
 width:1600px;
+background: #2F303A 40% url(./images/heroimage.png) no-repeat;
 }
 
 .hero-text{
@@ -189,11 +181,20 @@ margin-bottom:50px;
 
 .work-list{
   display: flex;
+  justify-content: center;
 }
 
-.work-foto{
-margin-right: 30px;
+.work-item{
+  margin-right: 30px;
 }
+
+.work-item:last-child{
+margin-right: 0;
+}
+
+/* .work-foto{
+
+} */
 
 .team-section{
   padding-top:94px;
@@ -215,6 +216,7 @@ color: #212121;
 .team-list{
   display: flex;
   margin-top:50px;
+  justify-content: center;
 }
 
 .team-foto{
@@ -225,13 +227,15 @@ border-radius: 0px;
 
 .team-item{
   width: 270px;
-height: 368px;
-left: 215px;
-top: 1635px;
 background: #FFFFFF;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
 margin-right: 30px;
+padding-bottom:30px;
+}
+
+.team-item:last-child{
+  margin-right: 0;
 }
 
 .team-name{
@@ -242,6 +246,8 @@ line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
+margin-top:30px;
+margin-bottom:10px;
 }
 
 .team-coment{
@@ -365,13 +371,27 @@ padding:6px 24px;
   
 }
 
+
+.product-section{
+padding-bottom:50px;
+padding-top:4px;
+}
+
 .product-list{
   gap:30px;
   flex-wrap: wrap;
   display:flex;
   justify-content: center;
   margin-bottom:94px;
-  margin-top:50px;
+}
+
+.product-name{
+  margin-top:20px;
+}
+
+.product-coment{
+  margin-top:4px;
+  margin-bottom:4px;
 }
 
 .footer-map{
