--- a/styles.css
+++ b/styles.css
@@ -1,435 +1,494 @@
-
-body{
-  font-family:"Roboto";
+body {
+  font-family: "Roboto";
   position: absolute;
 }
 
-a{
-text-decoration:none;
+a {
+  text-decoration: none;
 }
 
-ul{
-  
-  list-style:none;
+ul {
+  list-style: none;
   padding: 0;
   margin: 0;
 }
 
-h1, h2, h3,p{
+h1,
+h2,
+h3,
+p {
   margin: 0;
 }
 
 /* header */
-header .container{
+header .container {
   height: 80px;
-  display:flex;
+  display: flex;
   align-items: center;
 }
 
-
-
-.heder-list{
-  display:flex;
-  margin-left:93px;
+.heder-list {
+  display: flex;
+  margin-left: 93px;
 }
 
-.heder-page{
-margin-right: 55px;
+.heder-page {
+  margin-right: 55px;
 }
 
-
-.contacts-item{
+.contacts-item {
   margin-right: 50px;
 }
 
-.contacts-list{
-  display:flex;
+.contacts-list {
+  display: flex;
   margin-left: auto;
 }
 
 .logo {
-  font-family:'Raleway' ;
-  font-style:bold;
-font-size: 26px; 
-line-height:1.19;
-letter-spacing: 0.03em;
-color: #2196F3;
+  font-family: "Raleway";
+  font-style: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #2196f3;
 }
 
-.container{
+.container {
   outline: solid black 10px;
 
-padding-left:15px;
-padding-right:15px;
- width:1200px;
-margin-left: auto;
-margin-right: auto;
-
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.header-color{
-color: black;
+.header-color {
+  color: black;
 }
 
-.heder-link{
-font-style: medium;
-font-size:14px;
-line-height:1.14;
-letter-spacing:2%;
-color:#212121;
+.heder-link {
+  font-style: medium;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 2%;
+  color: #212121;
 }
 
-.heder-link:hover{
-color:#2196F3;
+.heder-link:hover {
+  color: #2196f3;
 }
 
-.heder-contacts{
-font-family:"Roboto";
-font-size: 14px;
-line-height:1.14;
-letter-spacing:2%;
-color: #212121;
+.heder-contacts {
+  font-family: "Roboto";
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 2%;
+  color: #212121;
 }
 
-.heder-contacts:hover{
-  color:#2196F3;
+.heder-contacts:hover {
+  color: #2196f3;
 }
-section, header, footer{
+section,
+header,
+footer {
   outline: solid red;
 }
 
-.hero-section{
-padding-top:200px;
-padding-bottom:200px;
-width:1600px;
-background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/heroimage.png);
+.icon-header {
+  width: 16px;
+  height: 12px;
+  left: 65.75%;
+  right: 33.25%;
+  top: 1.16%;
+  bottom: 98.43%;
+  color: #757575;
 }
 
-.hero-text{
-  font-family: 'Roboto';
+.icon-header:hover {
+  width: 16px;
+  height: 12px;
+  left: 65.75%;
+  right: 33.25%;
+  top: 1.16%;
+  bottom: 98.43%;
+  color: #2196f3;
+}
+
+.hero-section {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  width: 1600px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(./images/heroimage.png);
+}
+
+.hero-text {
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36; 
+  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-  text-transform: uppercase; 
-  color: #FFFFFF;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
-.hero-button{
-background: #2196F3;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.87;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-color: #FFFFFF;
-margin-left: 724px;
-margin-top:40px;
+.hero-button {
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  margin-left: 724px;
+  margin-top: 40px;
 }
 
-.coments-section{
-  padding-top:94px;
-  padding-bottom:94px;
+.madal {
+  position: fixed;
+  width: 528px;
+  height: 581px;
+  left: 35%;
+  top: 10%;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  display: none;
 }
 
-.coments-list{
-display: flex;
-margin-right: 30px;
+.coments-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
-.cometns-item{
-margin-right:30px;
+.coments-list {
+  display: flex;
+  margin-right: 30px;
 }
 
-.cometns-item::before{
+.cometns-item {
+  margin-right: 30px;
+}
+
+.cometns-item::before {
   display: block;
-content: "";
-height: 120px;
-background-repeat: no-repeat;
-background-position: center;
-background-size: contain;
-background-color: #F5F4FA;
-margin-bottom: 30px;
+  content: "";
+  height: 120px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: #f5f4fa;
+  margin-bottom: 30px;
 }
 
-.cometns-item:nth-child(1)::before{
-background-image: url(./images/antenna\ 1.png);
-background-size: 70px 70px;
+.cometns-item:nth-child(1)::before {
+  background-image: url(./images/antenna\ 1.png);
+  background-size: 70px 70px;
 }
 
-.cometns-item:nth-child(2)::before{
+.cometns-item:nth-child(2)::before {
   background-image: url(./images/clock\ 1.png);
   background-size: 70px 70px;
-  }
-  
-  .cometns-item:nth-child(3)::before{
+}
+
+.cometns-item:nth-child(3)::before {
   background-image: url(./images/diagram\ 1.png);
   background-size: 70px 70px;
-  }
-  
-  .cometns-item:nth-child(4)::before{
+}
+
+.cometns-item:nth-child(4)::before {
   background-image: url(./images/astronaut\ 1.png);
   background-size: 70px 70px;
-  }
-
-.coments-title{
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #212121;
 }
 
-.coments-text{
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: #757575;
+.coments-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
 }
 
-.work-section{
-padding-bottom:94px;
+.coments-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
-.work-title{
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
-margin-bottom:50px;
+.work-section {
+  padding-bottom: 94px;
 }
 
-.work-list{
+.work-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 50px;
+}
+
+.work-list {
   display: flex;
   justify-content: center;
 }
 
-.work-item{
+.work-item {
   margin-right: 30px;
 }
 
-.work-item:last-child{
-margin-right: 0;
+.work-item:last-child {
+  margin-right: 0;
 }
 
 /* .work-foto{
 
 } */
 
-.team-section{
-  padding-top:94px;
-  padding-bottom:94px;
-  background: #F5F4FA;
+.team-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background: #f5f4fa;
 }
 
-.team-title{
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
-
+.team-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
 }
 
-.team-list{
+.team-list {
   display: flex;
-  margin-top:50px;
+  margin-top: 50px;
   justify-content: center;
 }
 
-.team-foto{
-width: 270px;
-border-radius: 0px;
-
-}
-
-.team-item{
+.team-foto {
   width: 270px;
-background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
-margin-right: 30px;
-padding-bottom:30px;
+  border-radius: 0px;
 }
 
-.team-item:last-child{
+.team-item {
+  width: 270px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  margin-right: 30px;
+  padding-bottom: 30px;
+}
+
+.team-item:last-child {
   margin-right: 0;
 }
 
-.team-name{
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.18;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
-margin-top:30px;
-margin-bottom:10px;
+.team-name {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
-.team-coment{
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.18;
-text-align: center;
-letter-spacing: 0.03em;
-color: #757575;
+.team-coment {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
-.footer{
-
-  background: #2F303A;
+.icon-elipce {
+  width: 20px;
+  height: 20px;
 }
 
-.footer .container{
-  padding-top:60px;
-padding-bottom:60px;
+.icon-list {
+  display: flex;
+  justify-content: center;
 }
 
-.footer-item{
-  margin-bottom:9px;
+.icon-item{
+  margin-right:10px;
 }
 
-.footer-color{
+.footer {
+  background: #2f303a;
+}
+
+.footer .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-item {
+  margin-bottom: 9px;
+}
+
+.footer-color {
   color: white;
-  }
+}
 
-.footer-map{
+.footer-map {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.72;
-  letter-spacing: 0.03em; 
-  color: #FFFFFF;
-
+  letter-spacing: 0.03em;
+  color: #ffffff;
 }
 
-.footer-mail{
+.footer-mail {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-
-
 }
 
-.footer-tel{
+.footer-tel {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  
-
 }
 
-.button-list{
+.fotter-reklam {
+  width: 116px;
+  height: 16px;
+  left: 516px;
+  top: 2749px;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
+
+.button-list {
   display: flex;
-  padding-top:94px;
-  padding-bottom:50px;
+  padding-top: 94px;
+  padding-bottom: 50px;
   justify-content: center;
 }
 
-  /* .button-item{
+/* .button-item{
  
 }   */
 
-.button-button{
+.button-button {
   border: none;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
-  margin-right:8px;
-  background: #F5F4FA;
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
-
-/* padding-left:24px;
-padding-right:24px;
-padding-top:6px;
-padding-bottom:6px; */
-
-/* padding: 6px 24px 6px 24px; */
-padding:6px 24px;
-
-}
-
-.button-button:hover{
-  border: none;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #FFFFFF;
-    margin-right:8px;
-    background:  #2196F3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: #212121;
+  margin-right: 8px;
+  background: #f5f4fa;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  
+
+  /* padding-left:24px;
+padding-right:24px;
+padding-top:6px;
+padding-bottom:6px; */
+
+  /* padding: 6px 24px 6px 24px; */
+  padding: 6px 24px;
+}
+
+.button-button:hover {
+  border: none;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  margin-right: 8px;
+  background: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+
   /* padding-left:24px;
   padding-right:24px;
   padding-top:6px;
   padding-bottom:6px; */
-  
+
   /* padding: 6px 24px 6px 24px; */
-  padding:6px 24px;
-  
+  padding: 6px 24px;
 }
 
-
-.product-section{
-padding-bottom:50px;
-padding-top:4px;
+.product-section {
+  padding-bottom: 50px;
+  padding-top: 4px;
 }
 
-.product-list{
-  gap:30px;
+.product-list {
+  gap: 30px;
   flex-wrap: wrap;
-  display:flex;
+  display: flex;
   justify-content: center;
-  margin-bottom:94px;
+  margin-bottom: 94px;
 }
 
-.product-name{
-  margin-top:20px;
+.product-name {
+  margin-top: 20px;
 }
 
-.product-coment{
-  margin-top:4px;
-  margin-bottom:4px;
+.product-coment {
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
-.footer-map{
-  margin-top:20px;
-  margin-bottom:9px;
+.footer-map {
+  margin-top: 20px;
+  margin-bottom: 9px;
 }
