--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,11 @@ header .container {
   margin-left: auto;
 }
 
+.heder-contacts:hover {
+  fill: #2196f3;
+  color: #2196f3;
+}
+
 .logo {
   font-family: "Raleway";
   font-style: bold;
@@ -74,10 +79,12 @@ header .container {
   line-height: 1.14;
   letter-spacing: 2%;
   color: #212121;
+  fill: #757575;
 }
 
 .heder-link:hover {
   color: #2196f3;
+  fill:#2196f3;
 }
 
 .heder-contacts {
@@ -88,9 +95,6 @@ header .container {
   color: #212121;
 }
 
-.heder-contacts:hover {
-  color: #2196f3;
-}
 section,
 header,
 footer {
@@ -104,18 +108,18 @@ footer {
   right: 33.25%;
   top: 1.16%;
   bottom: 98.43%;
-  color: #757575;
+  fill:#757575;
 }
 
-.icon-header:hover {
+ .icon-header:hover {
   width: 16px;
   height: 12px;
   left: 65.75%;
   right: 33.25%;
   top: 1.16%;
   bottom: 98.43%;
-  color: #2196f3;
-}
+  fill: #2196f3;
+} 
 
 .hero-section {
   padding-top: 200px;
@@ -155,6 +159,11 @@ footer {
   color: #ffffff;
   margin-left: 724px;
   margin-top: 40px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border: none;
 }
 
 .madal {
@@ -223,6 +232,7 @@ footer {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
+  margin-bottom: 10px;
 }
 
 .coments-text {
@@ -266,6 +276,36 @@ footer {
 /* .work-foto{
 
 } */
+
+.positioning-list {
+  display: flex;
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  left: 215px;
+  top: 1435px;
+  margin-right: 30px;
+  background: rgba(47, 48, 58, 0.8) 80%;
+}
+
+.positioning-item {
+  position: absolute;
+  width: 171px;
+  height: 16px;
+  left: 715px;
+  top: 1462px;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
 
 .team-section {
   padding-top: 94px;
@@ -333,6 +373,7 @@ footer {
 .icon-elipce {
   width: 20px;
   height: 20px;
+  fill:#AFB1B8;
 }
 
 .icon-list {
@@ -340,8 +381,8 @@ footer {
   justify-content: center;
 }
 
-.icon-item{
-  margin-right:10px;
+.icon-item {
+  margin-right: 10px;
 }
 
 .footer {
@@ -388,12 +429,16 @@ footer {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.fotter-reklam {
+.reklam-list{
+  display: flex;
+  
+}
+
+.footer-reklam {
   width: 116px;
   height: 16px;
   left: 516px;
   top: 2749px;
-
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -401,7 +446,6 @@ footer {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
   color: #ffffff;
 }
 
