--- a/styles.css
+++ b/styles.css
@@ -102,13 +102,14 @@ footer {
 }
 
 .icon-header {
+  
   width: 16px;
   height: 12px;
   left: 65.75%;
   right: 33.25%;
   top: 1.16%;
   bottom: 98.43%;
-  fill:#757575;
+  fill:currentColor;
 }
 
  .icon-header:hover {
@@ -167,6 +168,7 @@ footer {
 }
 
 .madal {
+  list-style-type: none;
   position: fixed;
   width: 528px;
   height: 581px;
@@ -176,7 +178,57 @@ footer {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  display: none;
+   /* display: none;  */
+}
+
+.medal-hero{
+  position: absolute;
+width: 448px;
+height: 23px;
+left: 576px;
+top: 261px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 23px;
+text-align: center;
+letter-spacing: 0.03em;
+
+color: #212121;
+}
+
+.medal-text{
+  position: absolute;
+  width: 22px;
+  height: 14px;
+  left: 576px;
+  top: 296px;
+  
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  /* identical to box height */
+  
+  letter-spacing: 0.01em;
+  
+  color: #757575;
+}
+
+.medal-textarea{
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  left: 576px;
+  top: 314px;
+  
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+color: #212121 20%;
+border-color: #212121 20%;
 }
 
 .coments-section {
@@ -267,6 +319,7 @@ footer {
 
 .work-item {
   margin-right: 30px;
+  position: relative;
 }
 
 .work-item:last-child {
@@ -276,24 +329,11 @@ footer {
 /* .work-foto{
 
 } */
-
-.positioning-list {
-  display: flex;
-  position: absolute;
-  width: 370px;
-  height: 70px;
-  left: 215px;
-  top: 1435px;
-  margin-right: 30px;
-  background: rgba(47, 48, 58, 0.8) 80%;
-}
-
 .positioning-item {
   position: absolute;
-  width: 171px;
-  height: 16px;
-  left: 715px;
-  top: 1462px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
 
   font-family: "Roboto";
   font-style: normal;
@@ -303,7 +343,9 @@ footer {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
+  padding-top:27px;
+  padding-bottom:27px;
+  background: rgba(47, 48, 58, 0.8);
   color: #ffffff;
 }
 
