--- a/SASS/components/_footer.scss
+++ b/SASS/components/_footer.scss
@@ -42,11 +42,24 @@
     color: rgba(255, 255, 255, 0.6);
   }
   
-  .reklam-list{
-    display: flex;
-    
-  }
   
+  .reklam-text{
+width: 116px;
+height: 16px;
+left: 516px;
+top: 2749px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+  }
+
   .footer-reklam {
     width: 116px;
     height: 16px;
