--- a/SASS/main.css
+++ b/SASS/main.css
@@ -20,8 +20,16 @@ p {
   margin: 0;
 }
 
-/* header */
-header.container {
+.container {
+  outline: solid black 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header .container {
   height: 80px;
   display: flex;
   align-items: center;
@@ -57,16 +65,6 @@ header.container {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #2196f3;
-}
-
-.container {
-  outline: solid black 10px;
-
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .header-color {
@@ -140,11 +138,7 @@ footer {
   padding-top: 200px;
   padding-bottom: 200px;
   width: 1600px;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(./images/heroimage.png);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/heroimage.png);
 }
 
 .hero-text {
@@ -181,6 +175,134 @@ footer {
   border: none;
 }
 
+.coments-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.coments-list {
+  display: flex;
+  margin-right: 30px;
+}
+
+.cometns-item {
+  margin-right: 30px;
+}
+
+.cometns-item::before {
+  display: block;
+  content: "";
+  height: 120px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: #f5f4fa;
+  margin-bottom: 30px;
+}
+
+.cometns-item:nth-child(1)::before {
+  background-image: url(../../images/antenna\ 1.png);
+  background-size: 70px 70px;
+}
+
+.cometns-item:nth-child(2)::before {
+  background-image: url(../../images/clock\ 1.png);
+  background-size: 70px 70px;
+}
+
+.cometns-item:nth-child(3)::before {
+  background-image: url(../../images/diagram\ 1.png);
+  background-size: 70px 70px;
+}
+
+.cometns-item:nth-child(4)::before {
+  background-image: url(../../images/astronaut\ 1.png);
+  background-size: 70px 70px;
+}
+
+.coments-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+  margin-bottom: 10px;
+}
+
+.coments-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.team-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background: #f5f4fa;
+}
+
+.team-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.team-list {
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
+}
+
+.team-foto {
+  width: 270px;
+  border-radius: 0px;
+}
+
+.team-item {
+  width: 270px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  margin-right: 30px;
+  padding-bottom: 30px;
+}
+
+.team-item:last-child {
+  margin-right: 0;
+}
+
+.team-name {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.team-coment {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
 .madal {
   position: absolute;
   width: 528px;
@@ -189,8 +311,7 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%);
   background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   /* display: none;     */
 }
@@ -206,7 +327,6 @@ footer {
   left: 0;
   bottom: 0;
   right: 0;
-
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 10;
 }
@@ -221,7 +341,6 @@ footer {
   line-height: 23px;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: #212121;
 }
 
@@ -235,9 +354,7 @@ footer {
   font-size: 12px;
   line-height: 14px;
   /* identical to box height */
-
   letter-spacing: 0.01em;
-
   color: #757575;
 }
 
@@ -266,7 +383,6 @@ footer {
   box-sizing: border-box;
   width: 448px;
   height: 120px;
-
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
@@ -275,75 +391,9 @@ footer {
   border: none;
   width: 200px;
   height: 50px;
-  background: #188ce8;
+  background: #188CE8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: #ffffff;
-}
-
-.coments-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.coments-list {
-  display: flex;
-  margin-right: 30px;
-}
-
-.cometns-item {
-  margin-right: 30px;
-}
-
-.cometns-item::before {
-  display: block;
-  content: "";
-  height: 120px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  background-color: #f5f4fa;
-  margin-bottom: 30px;
-}
-
-.cometns-item:nth-child(1)::before {
-  background-image: url(./images/antenna\ 1.png);
-  background-size: 70px 70px;
-}
-
-.cometns-item:nth-child(2)::before {
-  background-image: url(./images/clock\ 1.png);
-  background-size: 70px 70px;
-}
-
-.cometns-item:nth-child(3)::before {
-  background-image: url(./images/diagram\ 1.png);
-  background-size: 70px 70px;
-}
-
-.cometns-item:nth-child(4)::before {
-  background-image: url(./images/astronaut\ 1.png);
-  background-size: 70px 70px;
-}
-
-.coments-title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #212121;
-  margin-bottom: 10px;
-}
-
-.coments-text {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
+  color: #FFFFFF;
 }
 
 .work-section {
@@ -382,7 +432,6 @@ footer {
   width: 100%;
   left: 0;
   bottom: 0;
-
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -397,73 +446,10 @@ footer {
   color: #ffffff;
 }
 
-.team-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  background: #f5f4fa;
-}
-
-.team-title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-
-.team-list {
-  display: flex;
-  margin-top: 50px;
-  justify-content: center;
-}
-
-.team-foto {
-  width: 270px;
-  border-radius: 0px;
-}
-
-.team-item {
-  width: 270px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  margin-right: 30px;
-  padding-bottom: 30px;
-}
-
-.team-item:last-child {
-  margin-right: 0;
-}
-
-.team-name {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
-
-.team-coment {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
 .icon-elipce {
   width: 20px;
   height: 20px;
-  fill: #afb1b8;
+  fill: #AFB1B8;
 }
 
 .icon-list {
@@ -519,8 +505,19 @@ footer {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.reklam-list {
-  display: flex;
+.reklam-text {
+  width: 116px;
+  height: 16px;
+  left: 516px;
+  top: 2749px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 .footer-reklam {
@@ -546,9 +543,8 @@ footer {
 }
 
 /* .button-item{
- 
-}   */
 
+}   */
 .button-button {
   border: none;
   font-family: "Roboto";
@@ -561,15 +557,12 @@ footer {
   color: #212121;
   margin-right: 8px;
   background: #f5f4fa;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-
   /* padding-left:24px;
-padding-right:24px;
-padding-top:6px;
-padding-bottom:6px; */
-
+  padding-right:24px;
+  padding-top:6px;
+  padding-bottom:6px; */
   /* padding: 6px 24px 6px 24px; */
   padding: 6px 24px;
 }
@@ -586,15 +579,12 @@ padding-bottom:6px; */
   color: #ffffff;
   margin-right: 8px;
   background: #2196f3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-
   /* padding-left:24px;
   padding-right:24px;
   padding-top:6px;
   padding-bottom:6px; */
-
   /* padding: 6px 24px 6px 24px; */
   padding: 6px 24px;
 }
@@ -628,4 +618,4 @@ padding-bottom:6px; */
 
 footer .container {
   display: flex;
-}
+}/*# sourceMappingURL=main.css.map */
