--- a/SASS/components/_coments.scss
+++ b/SASS/components/_coments.scss
@@ -6,6 +6,8 @@
   .coments-list {
     display: flex;
     margin-right: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   
   .cometns-item {
