--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -1,31 +1,36 @@
 .hero-section {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    width: 1600px;
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../../images/heroimage.png);
+  padding-top: 118px;
+  padding-bottom: 118px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../../images/heroimage.png);
+      @media screen and (min-width:1200px) {
+        padding-top: 200px;
+        padding-bottom: 280px;
+      }
   }
   
   .hero-text {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
-    font-size: 44px;
+    font-size: 26px;
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #ffffff;
+    @media screen and (min-width:1200px) {
+      font-size: 44px;
+    }
   }
   
   .hero-button {
     background: #2196f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -34,11 +39,22 @@
     text-align: center;
     letter-spacing: 0.06em;
     color: #ffffff;
-    margin-left: 724px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 40px;
     padding-left: 24px;
     padding-right: 24px;
     padding-top: 10px;
     padding-bottom: 10px;
     border: none;
+
+    @media screen and (min-width:480px) {
+    
+    }
+    @media screen and (min-width:768px) {
+    
+    }
+    @media screen and (min-width:1200px) {
+      
+    }
   }
