--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,5 +1,6 @@
 @import "./components/basic";
 @import "./components/header";
+@import"./components/mobile-modal";
 @import "./components/hero";
 @import "./components/coments";
 @import "./components/team";
