--- a/SASS/components/_footer.scss
+++ b/SASS/components/_footer.scss
@@ -5,6 +5,8 @@
   .footer .container {
     padding-top: 60px;
     padding-bottom: 60px;
+    display: flex;
+    flex-wrap: wrap;
   }
   
   .footer-item {
@@ -60,11 +62,14 @@ text-transform: uppercase;
 color: #FFFFFF;
   }
 
+.reklam-container{
+  margin-left: 70px;
+}
+
+
   .footer-reklam {
     width: 116px;
     height: 16px;
-    left: 516px;
-    top: 2749px;
     font-family: "Roboto";
     font-style: normal;
     font-weight: 700;
@@ -73,6 +78,7 @@ color: #FFFFFF;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #ffffff;
+
   }
   
   .button-list {
