--- a/SASS/main.css
+++ b/SASS/main.css
@@ -235,13 +235,13 @@ header .container {
 
 .coments-list {
   display: flex;
-  margin-right: 30px;
+  gap: 30px;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 .cometns-item {
-  margin-right: 30px;
+  width: 270px;
 }
 
 .cometns-item::before {
@@ -317,20 +317,40 @@ header .container {
   margin-top: 50px;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.team-foto {
-  width: 270px;
-  border-radius: 0px;
+  gap: 30px;
 }
 
 .team-item {
-  width: 270px;
+  width: 450px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-right: 30px;
   padding-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .team-item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-item {
+    width: 270px;
+  }
+}
+
+.team-foto {
+  width: 450px;
+  border-radius: 0px;
+}
+@media screen and (min-width: 768px) {
+  .team-foto {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-foto {
+    width: 270px;
+  }
 }
 
 .team-item:last-child {
@@ -348,6 +368,11 @@ header .container {
   margin-top: 30px;
   margin-bottom: 10px;
 }
+@media screen and (min-width: 1200px) {
+  .team-name {
+    width: 270px;
+  }
+}
 
 .team-coment {
   font-style: normal;
@@ -358,7 +383,6 @@ header .container {
   letter-spacing: 0.03em;
   color: #757575;
 }
-
 .madal {
   position: absolute;
   width: 528px;
@@ -453,6 +477,12 @@ header .container {
 
 .work-section {
   padding-bottom: 94px;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .work-section {
+    display: block;
+  }
 }
 
 .work-title {
@@ -470,21 +500,18 @@ header .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 30px;
 }
 
 .work-item {
-  margin-right: 30px;
   position: relative;
-}
-
-.work-item:last-child {
-  margin-right: 0;
 }
 
 /* .work-foto{
 
 } */
 .positioning-item {
+  position: absolute;
   width: 100%;
   left: 0;
   bottom: 0;
@@ -524,6 +551,8 @@ header .container {
 .footer .container {
   padding-top: 60px;
   padding-bottom: 60px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .footer-item {
@@ -576,11 +605,13 @@ header .container {
   color: #FFFFFF;
 }
 
+.reklam-container {
+  margin-left: 70px;
+}
+
 .footer-reklam {
   width: 116px;
   height: 16px;
-  left: 516px;
-  top: 2749px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -674,4 +705,53 @@ header .container {
 
 footer .container {
   display: flex;
+}
+
+.client {
+  width: 480px;
+  height: 519px;
+  left: 0px;
+  top: 0px;
+  margin-top: 60px;
+  background: #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .client {
+    width: 768px;
+    height: 397px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client {
+    width: 1600px;
+    height: 372px;
+    margin-top: 94px;
+  }
+}
+
+.client-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 33px;
+  /* identical to box height */
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.client-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 30px;
+  gap: 30px;
+}
+
+.client-item {
+  width: 210px;
+  height: 92px;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
 }/*# sourceMappingURL=main.css.map */
